- 모달 오버레이 추가 - 북마크 페이지 반응형 적용

--- a/src/app/(thgallery)/bookmark/styles/bookmark.module.scss
+++ b/src/app/(thgallery)/bookmark/styles/bookmark.module.scss
@@ -23,3 +23,34 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .bookmark_wrap {
+    .title_area {
+    }
+    .image_area {
+      ul {
+        li {
+          flex-basis: calc(50% - 10px);
+          img {
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 480px) {
+  .bookmark_wrap {
+    .title_area {
+    }
+    .image_area {
+      ul {
+        li {
+          flex-basis: calc(100% - 10px);
+          img {
+          }
+        }
+      }
+    }
+  }
+}
